# macroweave

./: CHANGELOG.md  Cargo.toml  README.md  licenserc.toml  taplo.toml
.github/: semantic.yml
macro-template/: Cargo.toml  build.rs
macro-template/src/: expand.rs  expands.rs  lib.rs  parse.rs  sources.rs
macro-template/tests/: compiletest.rs  tests.rs
macro-template/tests/ui/: bracketed_row.stderr  bracketed_variables.rs  bracketed_variables.stderr  duplicate_input_variable.rs  duplicate_input_variable.stderr  duplicate_template_variable.rs  duplicate_template_variable.stderr  empty_input_list.stderr  empty_range_input.rs  empty_range_input.stderr  empty_template_variables.rs  empty_template_variables.stderr  mixed_range_bounds.stderr  range_multiple_variables.rs  range_multiple_variables.stderr  range_radix_mismatch.stderr  range_suffix_mismatch.stderr  row_arity_mismatch.stderr  source_duplicate_placeholder.stderr
macro-template/tests/ui/err/: bracketed_row.rs  bracketed_row.stderr  bracketed_tuple_row.rs  bracketed_variables.stderr  duplicate_binding.rs  duplicate_binding.stderr  duplicate_input_variable.stderr  duplicate_template_variable.stderr  empty_input_list.rs  empty_input_list.stderr  empty_range_input.stderr  empty_template_variables.stderr  empty_tuple_pattern.rs  missing_hash_binding.rs  missing_hash_binding.stderr  missing_row_comma.rs  missing_row_comma.stderr  mixed_range_bounds.rs  mixed_range_bounds.stderr  nested_repeat_reuses_placeholder.rs  non_ident_input_value.rs  range_method_with_argument.rs  range_method_with_argument.stderr  range_method_without_parentheses.rs  range_method_without_parentheses.stderr  range_multiple_variables.stderr  range_radix_mismatch.rs  range_radix_mismatch.stderr  range_suffix_mismatch.rs  range_suffix_mismatch.stderr  row_arity_mismatch.rs  row_arity_mismatch.stderr  splice_placeholder_outside_repetition.rs  splice_placeholder_outside_repetition.stderr  splice_without_repetition.rs  splice_without_repetition.stderr  strip_prefix_non_integer_range.rs  strip_prefix_non_integer_range.stderr  unknown_range_method.rs  unknown_range_method.stderr
macro-template/tests/ui/ok/: range_methods.rs
macroweave/: Cargo.toml  build.rs
macroweave/examples/: read_le.rs
macroweave/src/: lib.rs  parse.rs
macroweave/tests/: tests.rs
macroweave/tests/ui/err/: bracketed_tuple_row.rs  bracketed_tuple_row.stderr  duplicate_binding.rs  empty_input_list.rs  empty_input_list.stderr  empty_input_value.rs  empty_input_value.stderr  empty_tuple_pattern.rs  non_ident_binding.rs  non_ident_binding.stderr  row_arity_mismatch.rs  splice_placeholder_outside_repetition.rs  splice_without_repetition.rs  splice_without_repetition.stderr
(+25 files in other folders)
