# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "macro-template"
version = "0.1.0"

categories = ["development-tools::procedural-macro-helpers"]
description = "Macro to generate repeated Rust code with table-driven inputs."
keywords = ["macro", "template", "codegen"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106" }
quote = { version = "1.0.45" }
syn = { version = "2.0.118" }

[dev-dependencies]
paste = "1.0.15"
trybuild = { version = "1.0.116" }

[lints]
workspace = true
