# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "macroweave"
version = "0.1.0"

categories = ["development-tools::procedural-macro-helpers"]
description = "Procedural macros for small compile-time repetitions over Rust token sequences."
keywords = ["macro", "repeat", "splice", "codegen"]
readme = "README.md"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", default-features = false, features = [
  "parsing",
  "printing",
  "proc-macro",
] }

[dev-dependencies]
trybuild = { version = "1.0" }

[lints]
workspace = true
